# prompt2promolab

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: research_notes.md
notebooks/: 00_repo_overview.ipynb  01_model_selector_and_smoke_test.ipynb  02_generate_reel_15s.ipynb  03_generate_reel_30s.ipynb  04_generate_reel_45s.ipynb  05_generate_institutional_long_video.ipynb  06_prompt_lab_nazaapp.ipynb  07_tts_narration_generator.ipynb  08_subtitle_generator.ipynb  09_extrair_texto_audio.ipynb  10_txt_para_srt.ipynb
outputs/legendas/: vide2_escrito.srt  vide2_transcricao.txt  vide2_transcricao_escrito.txt  vido1_escrito.srt  vido1_transcricao_escrito.txt
outputs/nazaapp_15s/: nazaapp_15s_final.concat.txt
outputs/nazaapp_30s/: nazaapp_30s_final.concat.txt
prompts/brands/: nazaapp_brand_pack.yaml  nazaapp_examples.md
prompts/templates/: institutional_template.md  reel_15s_template.md  reel_30s_template.md  reel_45s_template.md
scripts/: concat_storyboard.py
src/prompt2promolab/: __init__.py  config.py  ffmpeg_utils.py  pipelines.py  prompting.py  render.py  storyboard.py
storyboards/: nazaapp_15s.json  nazaapp_30s.json  nazaapp_45s.json  nazaapp_institutional.json
